<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_page"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_football"
            android:icon="@drawable/ic_menu_football_page"
            android:title="@string/menu_football" />
        <item
            android:id="@+id/nav_basketball"
            android:icon="@drawable/ic_menu_basketball_page"
            android:title="@string/menu_basketball" />
        <item
            android:id="@+id/nav_other"
            android:icon="@drawable/ic_menu_other_page"
            android:title="@string/menu_other" />
        <item
            android:id="@+id/nav_serbia"
            android:icon="@drawable/ic_menu_serbia_page"
            android:title="@string/menu_serbia" />
    </group>

    <item android:title="Usluge">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_contact_page"
                android:title="@string/menu_contact" />
            <item
                android:id="@+id/nav_shop"
                android:icon="@drawable/ic_menu_shop_page"
                android:title="@string/menu_shop" />
        </menu>
    </item>

</menu>
